tests/paczka1/fuzzy1/26320062.err
Error in line 1: TXBU1OoEMN A267 96,5
Error in line 6: TXBU1OoEMN A774 86,1
Error in line 10: TXBU1OoEMN S9 22,9
Error in line 17: TXBU1OoEMN A774 -3,6
Error in line 11: TXBU1OoEMN A774 78,5
Error in line 21: TXBU1OoEMN S9 76,3
Error in line 28: EgZP9 A267 12,7
Error in line 26: cQ41AxsZa S9 92,3
Error in line 25: TXBU1OoEMN A774 97,1
Error in line 30: cQ41AxsZa A267 6,1
